--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,77 @@
+/* Font imports */
 @import "tailwindcss";
+@font-face {
+  font-family: "Hauora";
+  src: url("/fonts/Hauora-Regular.otf") format("opentype");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: "Hauora";
+  src: url("/fonts/Hauora-Medium.otf") format("opentype");
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: "Hauora";
+  src: url("/fonts/Hauora-SemiBold.otf") format("opentype");
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: "Hauora";
+  src: url("/fonts/Hauora-Bold.otf") format("opentype");
+  font-weight: 700;
+}
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #f7f7f7;
+  --secondary: #696b6c;
+  --accent: #4353ff;
+  --text-primary: #1f232e;
+  --text-secondary: #696b6c;
+  --font-hauora: "Hauora", sans-serif;
 }
 
 @theme inline {
   --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --color-secondary: var(--secondary);
+  --color-accent: var(--accent);
+  --color-text-primary: var(--text-primary);
+  --color-text-secondary: var(--text-secondary);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer components {
+  .heading {
+    @apply text-[42px] font-bold text-text-primary;
+  }
+
+  .sub-heading {
+    @apply text-[14px] font-normal text-text-secondary;
+  }
+
+  /* Responsive styles */
+  @media (min-width: 1362px) {
+    .heading {
+      @apply text-[62px] font-bold text-text-primary;
+    }
+    .sub-heading {
+      @apply text-[16px] font-normal text-text-secondary;
+    }
+  }
+
+  @media (min-width: 1920px) {
+    .heading {
+      @apply text-[62px] font-bold text-text-primary;
+    }
+    .sub-heading {
+      @apply text-[18px] font-normal text-text-secondary;
+    }
   }
 }
 
 body {
   background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  color: var(--text-primary);
+  font-family: var(--font-hauora);
 }
