--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,12 @@
   font-weight: 700;
 }
 
+@font-face {
+  font-family: "Hauora";
+  src: url("/fonts/Hauora-ExtraBold.otf") format("opentype");
+  font-weight: 800;
+}
+
 :root {
   --background: #f7f7f7;
   --secondary: #696b6c;
@@ -43,7 +49,7 @@
 
 @layer components {
   .heading {
-    @apply text-[42px] font-bold text-text-primary;
+    @apply text-[42px] font-extrabold text-text-primary;
   }
 
   .sub-heading {
@@ -65,7 +71,7 @@
       @apply text-[62px] font-bold text-text-primary;
     }
     .sub-heading {
-      @apply text-[18px] font-normal text-text-secondary;
+      @apply text-[16px] font-normal text-text-secondary;
     }
   }
 }
